// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing graphql resquest user MUTATION tokens Testing askNewEmailToken(email:String!, password: String!) should fail returning a new token for validate an email because email already validated 1`] = `
Object {
  "data": Object {
    "validateAnEmailToken": true,
  },
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing askNewEmailToken(email:String!, password: String!) should fail returning a new token for validate an email because email already validated 2`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Email already validated!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing askNewEmailToken(email:String!, password: String!) should fail returning a new token for validate an email because incorrect password received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Received password is not correct!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing askNewEmailToken(email:String!, password: String!) should fail returning a new token for validate an email because unknown email received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: There is no user corresponding to the email "unknown@mail.com"],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing login(email: String!, password:String!) should fail during login because incorrect password received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Received password is not correct!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing login(email: String!, password:String!) should fail during login because unknown email received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: There is no user corresponding to the email "unknown@mail.com"],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsProducer(newProducer: ProducerInputAdd!) should create a new producer and return a token 1`] = `
Object {
  "data": Object {
    "producer": Object {
      "description": null,
      "email": "ben@schop.ch",
      "emailValidated": false,
      "firstname": "benoit",
      "followers": Array [],
      "followingProducers": Array [],
      "image": null,
      "isAdmin": false,
      "isValidated": false,
      "lastname": "schop",
      "phoneNumber": null,
      "products": Array [],
      "rating": null,
      "salespoint": null,
      "website": null,
    },
  },
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsProducer(newProducer: ProducerInputAdd!) should fail creating a new producer and returning a token because missing mendatory information (email) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$producer" got invalid value { firstname: "benoit", lastname: "schop", password: "abcd1234" }; Field value.email of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsProducer(newProducer: ProducerInputAdd!) should fail creating a new producer and returning a token because missing mendatory information (firstname) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$producer" got invalid value { lastname: "schop", email: "ben@schop.ch", password: "abcd1234" }; Field value.firstname of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsProducer(newProducer: ProducerInputAdd!) should fail creating a new producer and returning a token because missing mendatory information (lastname) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$producer" got invalid value { firstname: "benoit", email: "ben@schop.ch", password: "abcd1234" }; Field value.lastname of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsProducer(newProducer: ProducerInputAdd!) should fail creating a new producer and returning a token because missing mendatory information (password) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$producer" got invalid value { firstname: "benoit", lastname: "schop", email: "ben@schop.ch" }; Field value.password of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsUser(newUser: UserInputAdd!) should create a new user and return a token 1`] = `
Object {
  "data": Object {
    "user": Object {
      "email": "ben@schop.ch",
      "emailValidated": false,
      "firstname": "benoit",
      "followingProducers": Array [],
      "image": null,
      "isAdmin": false,
      "lastname": "schop",
    },
  },
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsUser(newUser: UserInputAdd!) should fail creating a new user and returning a token because missing mendatory information (email) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$user" got invalid value { firstname: "benoit", lastname: "schop", password: "abcd1234" }; Field value.email of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsUser(newUser: UserInputAdd!) should fail creating a new user and returning a token because missing mendatory information (firstname) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$user" got invalid value { lastname: "schop", email: "ben@schop.ch", password: "abcd1234" }; Field value.firstname of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsUser(newUser: UserInputAdd!) should fail creating a new user and returning a token because missing mendatory information (lastname) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$user" got invalid value { firstname: "benoit", email: "ben@schop.ch", password: "abcd1234" }; Field value.lastname of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing signUpAsUser(newUser: UserInputAdd!) should fail creating a new user and returning a token because missing mendatory information (password) 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$user" got invalid value { firstname: "benoit", lastname: "schop", email: "ben@schop.ch" }; Field value.password of required type String! was not provided.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should create a new producer and return a new token 1`] = `
Object {
  "data": Object {
    "upgradeUserToProducer": Object {
      "newLoginToken": Object {
        "token": Any<String>,
      },
      "producer": Object {
        "description": null,
        "email": "jerem@user.ch",
        "emailValidated": false,
        "firstname": "Jérémie",
        "followers": Array [],
        "followingProducers": Array [
          Object {
            "email": "antoine@paysan.ch",
            "firstname": "Antoine",
            "lastname": "Rochaille",
          },
        ],
        "image": "ceci est une image encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Chaton",
        "phoneNumber": null,
        "products": Array [],
        "rating": null,
        "salespoint": null,
        "website": null,
      },
    },
  },
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should create a new producer and return a token 1`] = `
Object {
  "data": Object {
    "upgradeUserToProducer": Object {
      "newLoginToken": Object {
        "token": Any<String>,
      },
      "producer": Object {
        "description": null,
        "email": "jerem@user.ch",
        "emailValidated": false,
        "firstname": "Jérémie",
        "followers": Array [],
        "followingProducers": Array [
          Object {
            "email": "antoine@paysan.ch",
            "firstname": "Antoine",
            "lastname": "Rochaille",
          },
        ],
        "image": "ceci est une image encodée en base64!",
        "isAdmin": false,
        "isValidated": false,
        "lastname": "Chaton",
        "phoneNumber": null,
        "products": Array [],
        "rating": null,
        "salespoint": null,
        "website": null,
      },
    },
  },
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should fail adding a new productType because not authenticated 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Sorry, you need to be authenticated to do that.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should fail adding a new productType because not authenticated as yourself 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You can't modify information of another user than yourself!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should fail creating a new producer and returning a new token because idUser received (too short) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Received user.id is invalid!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should fail creating a new producer and returning a new token because invalid idUser received (too long) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Received user.id is invalid!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should fail creating a new producer and returning a new token because unknown idUser received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: The received idUserToUpgrade is not in the database!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing upgradeUserToProducer(idUserToUpgrade: ID!, password: String!) should fail creating a new producer and returning a new token because wrong password 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Received password is not correct!],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing validateAnEmailToken(emailValidationToken: String!) should fail validating an email with received token because invalid token received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: invalid token],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing validateAnEmailToken(emailValidationToken: String!) should fail validating an email with received token because no token received 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: jwt must be provided],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing validateAnEmailToken(emailValidationToken: String!) should fail validating an email with received token because token has been modified 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: invalid signature],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing validateAnEmailToken(emailValidationToken: String!) should fail validating an email with received token because token has expired 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Your token is expired. Please ask for a new one.],
  ],
}
`;

exports[`Testing graphql resquest user MUTATION tokens Testing validateAnEmailToken(emailValidationToken: String!) should validate an email with received token 1`] = `
Object {
  "data": Object {
    "validateAnEmailToken": true,
  },
}
`;
